RESOLVED FIXED28788
JSON.stringify replacer array does not accept values that are not string primitives.
https://bugs.webkit.org/show_bug.cgi?id=28788
Summary JSON.stringify replacer array does not accept values that are not string prim...
Oliver Hunt
Reported 2009-08-27 16:32:49 PDT
JSON.stringify spec has been updated to support numbers in addition to strings, and their boxed equivalents.
Attachments
Patch v1 (4.35 KB, patch)
2009-08-27 16:37 PDT, Oliver Hunt
no flags
Patch v1 (5.29 KB, patch)
2009-08-27 16:51 PDT, Oliver Hunt
aroben: review+
Oliver Hunt
Comment 1 2009-08-27 16:37:57 PDT
Created attachment 38697 [details] Patch v1
Oliver Hunt
Comment 2 2009-08-27 16:51:00 PDT
Created attachment 38699 [details] Patch v1
Adam Roben (:aroben)
Comment 3 2009-08-27 16:53:09 PDT
Comment on attachment 38699 [details] Patch v1 r=me
Oliver Hunt
Comment 4 2009-08-27 17:27:42 PDT
committed r47847
Note You need to log in before you can comment on or make changes to this bug.