JSON.stringify replacer array does not accept values that are not string primitives. https://bugs.webkit.org/show_bug.cgi?id=28788

Reviewed by Adam Roben

Update the JSON stringifier to initialise its replacer array according to the most
recent version of the spec.

Canonical link: https://commits.webkit.org/39423@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47847 268f45cc-cd09-0410-ab3c-d52691b4dbfc